# icde-experiments

./: Dockerfile  README.md  flink-conf.yaml  run.py  run.sh
arc-lang/: Cargo.toml  README.md
arc-lang/crates/book/: book.toml
arc-lang/crates/book/mdbook-arc-lang/: Cargo.toml
arc-lang/crates/book/mdbook-arc-lang/src/: lib.rs  main.rs
arc-lang/crates/book/mdbook-exec/: Cargo.toml
arc-lang/crates/book/mdbook-exec/src/: lib.rs  main.rs
arc-lang/crates/book/mdbook-grammar/: Cargo.toml
arc-lang/crates/book/mdbook-grammar/src/: lib.rs  main.rs
arc-lang/crates/book/src/: SUMMARY.md  getting-started.md  introduction.md  rationale.md
arc-lang/crates/book/src/arc-lang/: Annots.md  Arms.md  Assign.md  Block.md  Body.md  Def.md  Effect.md  Expr.md  ExternDef.md  ExternType.md  Generics.md  Instance.md  Item.md  Module.md  Params.md  Pattern.md  Query.md  Sinks.md  Task.md  Type.md  TypeAlias.md  TypeArgs.md  TypeClass.md  Value.md  Where.md  mod.md
arc-lang/crates/book/src/dev/: ci.md
arc-lang/crates/book/src/dev/arc-lang/: mod.md
arc-lang/crates/book/src/dev/arc-sys/: mod.md
arc-lang/crates/book/src/examples/: deduplication.md  fraud-detection.md
arc-lang/crates/book/src/stdlib/: Array.md  DataFrame.md  mod.md
arc-lang/crates/book/src/tour/: basics.md  queries.md  tasks.md
arc-lang/crates/book/theme/css/: general.css  variables.css
arc-lang/crates/colors/src/: lib.rs
arc-lang/crates/compiler/: Cargo.toml
arc-lang/crates/compiler/codegen/write-ast/src/: lib.rs
arc-lang/crates/compiler/codegen/write-hir/src/: lib.rs
arc-lang/crates/compiler/codegen/write-rust/src/: lib.rs
arc-lang/crates/compiler/codegen/write-value/src/: lib.rs
arc-lang/crates/compiler/infra/codegen/src/: lib.rs
arc-lang/crates/compiler/infra/kafka/src/: context.rs
arc-lang/crates/compiler/infra/sources/src/: lib.rs
arc-lang/crates/compiler/infra/stack/src/: lib.rs
arc-lang/crates/compiler/irs/ast/src/: lib.rs
arc-lang/crates/compiler/irs/hir/src/: lib.rs
arc-lang/crates/compiler/irs/rust/src/: lib.rs
arc-lang/crates/compiler/irs/value/src/: conv.rs  de.rs  dynamic.rs  lib.rs  ord.rs  ser.rs
arc-lang/crates/compiler/passes/ast-to-hir/src/: context.rs  lib.rs
arc-lang/crates/compiler/passes/hir-flatten/: Cargo.toml
arc-lang/crates/compiler/passes/hir-flatten/src/: context.rs  lib.rs
arc-lang/crates/compiler/passes/hir-interpreter/: Cargo.toml
arc-lang/crates/compiler/passes/hir-interpreter/src/: context.rs  lib.rs
arc-lang/crates/compiler/passes/hir-ssa/: Cargo.toml
arc-lang/crates/compiler/src/: lib.rs
arc-lang/crates/config/src/: lib.rs
arc-lang/crates/logging/src/: lib.rs
arc-lang/crates/repl/src/: lib.rs
arc-lang/crates/runtime/: Cargo.toml
arc-lang/crates/runtime/builtins/: Cargo.toml
arc-lang/crates/runtime/builtins/src/: aggregator.rs  array.rs  assigner.rs  cow.rs  duration.rs  image.rs  iterator.rs  keyed_stream.rs  lib.rs  matrix.rs  model.rs  option.rs  stream.rs  string.rs  time.rs  traits.rs  vec.rs
arc-lang/crates/runtime/builtins/src/keyed_stream/: filter.rs  flat_map.rs  fork.rs  join.rs  keyby.rs  map.rs  merge.rs  scan.rs  simulator.rs  unkey.rs  window.rs
arc-lang/crates/runtime/builtins/src/stream/: batch.rs  filter.rs  filter_map.rs  flat_map.rs  fork.rs  keyby.rs  map.rs  merge.rs  scan.rs  simulator.rs  sink.rs  source.rs  window.rs  window_join.rs
arc-lang/crates/runtime/formats/src/csv/: de.rs
arc-lang/crates/runtime/runner/: Cargo.toml
arc-lang/crates/runtime/runner/src/: context.rs  current_thread.rs  data_parallel.rs  task_parallel.rs
arc-lang/crates/runtime/src/: lib.rs
arc-lang/crates/tree-sitter/: grammar.js
arc-lang/crates/tree-sitter/queries/arc_lang/: highlights.scm  injections.scm
arc-lang/crates/tree-sitter/src/: grammar.json  node-types.json  parser.c
arc-lang/src/: main.rs
arc-lang/tests/features/: array.arc  break.arc  dealias.arc
data-generator/: Cargo.toml
data-generator/src/: main.rs
flink-nexmark/: pom.xml
rust-barebones/: Cargo.toml
rust-barebones/benches/: csv_benchmark.rs
rust-barebones/src/: lib.rs  main.rs
rust-nexmark/: Cargo.toml
rust-nexmark-sequential/: Cargo.toml
rust-nexmark-sequential/src/: main.rs
rust-nexmark/src/: main.rs  utils.rs
(+70 files in other folders)
