[package]
name = "rust-nexmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexmark = { version = "0.2.0", features = ["serde"] }
runtime = { path = "/Users/klasseg/Workspace/arc-lang/crates/runtime" }
tokio-stream = { version = "0.1.14" }
csv = { version = "1.3.0" }
memmap2 = "0.9.0"
csv-core = "0.1.11"
lexical-parse-float = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
atoi = "2.0.0"
