[package]
name = "rust-nexmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nexmark = { version = "0.2.0", features = ["serde"] }
runtime = { path = "../arc-lang/crates/runtime" }
memmap2 = "0.9.0"
smartstring = "1.0.1"
csv = "1.3.0"
smol_str = "0.2.0"
