[package]
name = "builtins"
version.workspace = true
edition.workspace = true

[features]
ml = ["ort"]

[dependencies]
macros.workspace = true
image.workspace = true
ort = { workspace = true, optional = true }
ndarray.workspace = true
time.workspace = true
serde.workspace = true
float-cmp.workspace = true
tokio.workspace = true
tokio-util.workspace = true
formats.workspace = true
num.workspace = true
num-traits.workspace = true
url.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
once_cell.workspace = true
derive_more.workspace = true
minus.workspace = true
hyper.workspace = true
runner.workspace = true
smartstring.workspace = true
smol_str.workspace = true
fxhash.workspace = true
