[package]
name = "runner"
version.workspace = true
edition.workspace = true

# [features]
# thread-pinning = ["hwloc", "num_cpus", "libc"]
# default = []

[dependencies]
tokio.workspace = true
logging.workspace = true
# cfg-if.workspace = true

# Thread Pinning
# hwloc    = { version = "0.5.0", optional = true }
# num_cpus = { version = "1.15.0", optional = true }
# libc     = { version = "0.2.139" , optional = true }
