[package]
name = "hir-flatten"
version.workspace = true
edition.workspace = true

[dependencies]
im-rc.workspace = true
hir.workspace = true
utils.workspace = true
info.workspace = true
stack.workspace = true
name-gen.workspace = true
diagnostics.workspace = true
ast.workspace = true
write-hir.workspace = true
